--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "webpack.config.js",
   "dependencies": {},
   "scripts": {
+    "server": "node server/server.js",
     "start": "webpack-dev-server --mode development --config webpack.dev.js",
     "build": "webpack -p --mode production --config webpack.prod.js"
   },
