--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.3"
   },
-  "repository": "https://github.com/qjwvtd/webpack-dev-server.git",
+  "repository": "https://github.com/qjwvtd/skill.git",
   "author": "qjwvtd",
   "license": "ISC"
 }
