--- a/package.json
+++ b/package.json
@@ -11,35 +11,35 @@
     "build": "webpack -p --mode production --config webpack.prod.js"
   },
   "devDependencies": {
-    "axios": "^0.18.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.19.1",
-    "eslint-loader": "^2.0.0",
-    "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.9.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-router-dom": "^4.3.1",
-    "sass-loader": "^7.0.3",
-    "style-loader": "^0.20.3",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.12.2",
-    "webpack-cli": "^2.1.5",
-    "webpack-command": "^0.3.1",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.3"
+    "axios": "0.18.0",
+    "babel-core": "6.26.0",
+    "babel-eslint": "8.2.3",
+    "babel-loader": "7.1.4",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "clean-webpack-plugin": "0.1.19",
+    "css-loader": "0.28.11",
+    "eslint": "4.19.1",
+    "eslint-loader": "2.0.0",
+    "file-loader": "1.1.11",
+    "html-webpack-plugin": "3.2.0",
+    "mini-css-extract-plugin": "0.4.0",
+    "node-sass": "4.9.2",
+    "react": "16.4.1",
+    "react-dom": "16.4.1",
+    "react-router-dom": "4.3.1",
+    "sass-loader": "7.0.3",
+    "style-loader": "0.20.3",
+    "uglifyjs-webpack-plugin": "1.2.5",
+    "url-loader": "1.0.1",
+    "webpack": "4.12.2",
+    "webpack-cli": "2.1.5",
+    "webpack-command": "0.3.1",
+    "webpack-dev-server": "3.1.4",
+    "webpack-merge": "4.1.3"
   },
   "repository": "https://github.com/qjwvtd/skill.git",
   "author": "qjwvtd",
