--- a/.eslintrc
+++ b/.eslintrc
@@ -7,15 +7,61 @@
     }
   },
   "rules": {
-    "no-empty": "warn",//空语句块警告:{}
-    "no-sparse-arrays": "error",//禁止使用稀疏数组,[ "red",, "blue" ]
-    "no-unexpected-multiline": "error",//禁止使用令人困惑的多行表达式
-    "no-unreachable": "warn",//在return,throw,continue,break之后出现代码告警
-    "comma-dangle": ["error", "never"],//禁用对象或数组的拖尾逗号,[1,2,]
-    "indent": ["error"],//强制代码缩进，默认4个空格或TAB缩进
-    "semi": ["error", "always"],//强制使用分号进行正确的语句结尾
-    "no-var": "error",//禁止使用var申明变量，强制使用let,const
-    "no-shadow": 2,//外部作用域中的变量不能与它所包含的作用域中的变量或参数同名
-    "no-spaced-func": 2//调用函数时,函数名与()之间不能有空格
+    //强制4个缩进
+    "indent": [
+      "error",
+      4
+    ],
+    //未定义前不能使用
+    "no-use-before-define": 2,
+    // 禁止将 await 写在循环里
+    "no-await-in-loop": "off",
+    "no-sparse-arrays": "error",
+    "comma-dangle": [
+      "error",
+      "never"
+    ],
+    //强制正确的分号结尾
+    "semi": [
+      "error",
+      "always"
+    ],
+    //禁止出现多余的分号,如:const a = 1;;
+    "no-extra-semi": "error",
+    //分号必须写在行尾，禁止在行首出现
+    "semi-style": [
+      "error",
+      "last"
+    ],
+    "no-var": "error",
+    //块语句中的内容不能为空
+    "no-empty": 2,
+    //在创建对象字面量时不允许键重复 {a:1,a:1}
+    "no-dupe-keys": 2,
+    //禁止修改const声明的变量
+    "no-const-assign": 2,
+    //禁用with
+    "no-with": 2,
+    //new时必须加小括号
+    "new-parens": 2,
+    // 使用 === 替代 ==
+    "eqeqeq": [
+      2,
+      "allow-null"
+    ],
+    //禁止行尾有空格
+    "no-trailing-spaces": "error",
+    //if 后面必须要有 {，除非是单行 if
+    "curly": [
+      "error",
+      "multi-line",
+      "consistent"
+    ],
+    //在return,throw,continue,break之后出现代码告警
+    "no-unreachable": "warn",
+    //外部作用域中的变量不能与它所包含的作用域中的变量或参数同名
+    "no-shadow": 2,
+    //调用函数时,函数名与()之间不能有空格
+    "no-spaced-func": 2
   }
 }
